[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/graphic/gui/guiElement_6.png" type="Texture" id=1]
[ext_resource path="res://assets/graphic/gui/buildIcon_1.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/gui/buildIcon_2.png" type="Texture" id=3]
[ext_resource path="res://assets/graphic/gui/guiElement_0.png" type="Texture" id=4]
[ext_resource path="res://assets/graphic/gui/buildIcon_3.png" type="Texture" id=5]
[ext_resource path="res://assets/graphic/gui/guiElement_1.png" type="Texture" id=6]
[ext_resource path="res://assets/graphic/gui/guiElement_2.png" type="Texture" id=7]
[ext_resource path="res://assets/graphic/gui/guiElement_3.png" type="Texture" id=8]
[ext_resource path="res://assets/graphic/gui/buildIcon_4.png" type="Texture" id=9]
[ext_resource path="res://assets/graphic/gui/fontstyle_button.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/graphic/gui/leave_button.gd" type="Script" id=11]
[ext_resource path="res://assets/graphic/gui/guiElement_7.png" type="Texture" id=12]
[ext_resource path="res://assets/graphic/gui/guiElement_8.png" type="Texture" id=13]
[ext_resource path="res://assets/graphic/gui/fontstyle_small.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/graphic/gui/buildIcon_2_2.png" type="Texture" id=15]
[ext_resource path="res://assets/graphic/gui/buildIcon_4_2.png" type="Texture" id=16]
[ext_resource path="res://assets/graphic/gui/buildIcon_3_2.png" type="Texture" id=17]
[ext_resource path="res://assets/graphic/gui/buildIcon_1_2.png" type="Texture" id=18]
[ext_resource path="res://assets/graphic/gui/fontstyle_score_health.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/graphic/gui/guiElement_11.png" type="Texture" id=20]
[ext_resource path="res://assets/graphic/gui/guiElement_12.png" type="Texture" id=21]
[ext_resource path="res://assets/objects/speedButton.gd" type="Script" id=22]
[ext_resource path="res://assets/objects/buildPanel.gd" type="Script" id=23]
[ext_resource path="res://assets/graphic/gui/sellIcon_1.png" type="Texture" id=24]
[ext_resource path="res://assets/graphic/gui/sellIcon_1_2.png" type="Texture" id=25]
[ext_resource path="res://assets/objects/save.gd" type="Script" id=26]
[ext_resource path="res://assets/objects/HUDControl.gd" type="Script" id=27]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 512, 144 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 72 )

[node name="HUD" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 27 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildIcon_1" type="TextureButton" parent="Control/Panel"]
margin_left = 16.0
margin_top = 104.0
margin_right = 112.0
margin_bottom = 200.0
rect_rotation = -89.9999
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="Label" parent="Control/Panel/buildIcon_1"]
margin_left = 16.0
margin_top = -6.10352e-05
margin_right = 112.0
margin_bottom = 63.9999
rect_rotation = 90.0
custom_fonts/font = ExtResource( 14 )
text = "100$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildIcon_2" type="TextureButton" parent="Control/Panel"]
margin_left = 144.0
margin_top = 104.0
margin_right = 240.0
margin_bottom = 200.0
rect_rotation = -90.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="Label" parent="Control/Panel/buildIcon_2"]
margin_left = 16.0
margin_top = -16.0
margin_right = 148.0
margin_bottom = 48.0
rect_rotation = 90.0
custom_fonts/font = ExtResource( 14 )
text = "400$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildIcon_3" type="TextureButton" parent="Control/Panel"]
margin_left = 272.0
margin_top = 8.00002
margin_right = 368.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="Label" parent="Control/Panel/buildIcon_3"]
margin_left = 8.0
margin_top = 80.0
margin_right = 91.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 14 )
text = "800$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildIcon_4" type="TextureButton" parent="Control/Panel"]
margin_left = 400.0
margin_top = 8.00002
margin_right = 496.0
margin_bottom = 104.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="Label" parent="Control/Panel/buildIcon_4"]
margin_left = -8.0
margin_top = 80.0
margin_right = 105.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 14 )
text = "1200$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sellIcon" type="TextureButton" parent="Control/Panel"]
margin_left = 528.0
margin_top = 8.00002
margin_right = 624.0
margin_bottom = 104.0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="Label" parent="Control/Panel/sellIcon"]
margin_left = -8.0
margin_top = 80.0
margin_right = 105.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 14 )
text = "Sell"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="StaticBody2D" parent="Control/Panel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Panel/Area2D"]
position = Vector2( 320, 64 )
shape = SubResource( 2 )

[node name="speed" type="TextureButton" parent="Control"]
margin_left = 1840.0
margin_top = 8.0
margin_right = 1904.0
margin_bottom = 72.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="normalSpeed" type="TextureRect" parent="Control/speed"]
margin_left = 16.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 48.0
texture = ExtResource( 20 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fastSpeed" type="TextureRect" parent="Control/speed"]
visible = false
margin_left = 16.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="TextureButton" parent="Control"]
visible = false
margin_left = 1664.0
margin_top = 88.0
margin_right = 1824.0
margin_bottom = 152.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true
script = ExtResource( 26 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="Label" parent="Control/save"]
margin_right = 160.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 10 )
text = "SAVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave" type="TextureButton" parent="Control"]
margin_left = 1584.0
margin_top = 8.0
margin_right = 1824.0
margin_bottom = 72.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Label" parent="Control/leave"]
margin_right = 240.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 10 )
text = "LEAVE"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Label" parent="Control"]
margin_left = 16.0
margin_top = 8.0
margin_right = 672.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 19 )
text = "1500034654$"

[node name="health" type="Label" parent="Control"]
margin_left = 16.0
margin_top = 56.0
margin_right = 672.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 19 )
text = "100%"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Panel/buildIcon_1" to="Control/Panel" method="_on_buildIcon_1_pressed"]
[connection signal="pressed" from="Control/Panel/buildIcon_2" to="Control/Panel" method="_on_buildIcon_2_pressed"]
[connection signal="pressed" from="Control/Panel/buildIcon_3" to="Control/Panel" method="_on_buildIcon_3_pressed"]
[connection signal="pressed" from="Control/Panel/buildIcon_4" to="Control/Panel" method="_on_buildIcon_4_pressed"]
[connection signal="pressed" from="Control/Panel/sellIcon" to="Control/Panel" method="_on_sellIcon_pressed"]
[connection signal="pressed" from="Control/speed" to="Control/speed" method="_on_speed_pressed"]
[connection signal="pressed" from="Control/save" to="Control/save" method="_on_save_pressed"]
[connection signal="pressed" from="Control/leave" to="Control/leave" method="_on_leave_pressed"]
